--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,15 +1,18 @@
 <%= simple_form_for @event, remote: true do |f| %>
   <div class="form-inputs">
     <%= f.input :title %>
-    <%#= f.input :description %>
     <%= f.input :date_range, input_html: { class: "form-control input-sm date-range-picker" } %>
     <%= f.input_field :start, as: :hidden, value: Date.today, class: 'form-control input-sm start_hidden' %>
     <%= f.input_field :end, as: :hidden, value: Date.today, class: 'form-control input-sm end_hidden' %>
-    <%= f.input :color, as: :select, collection: [['Black','black'], ['Green','green'], ['Red','red'], ['Blue','blue'], ['Orange','orange']] %>
+    <%= f.input :color, as: :select, collection: [['Black','black'], ['Green','green'], ['Red','red']] %>
   </div>
 
   <div class="form-actions">
     <%= f.button :submit %>
+    <%= link_to 'New Recurring Event', 
+                new_recurring_event_path,
+                class: 'btn btn-default', 
+                remote: true if @event.new_record? %>
     <%= link_to 'Delete', 
                 event, 
                 method: :delete, 
