changes done in recurring events

--- a/app/views/recurring_events/create.js.erb
+++ b/app/views/recurring_events/create.js.erb
@@ -1,6 +1,1 @@
-$('.calendar').fullCalendar(
-  'renderEvents', 
-  $.parseJSON("<%=j render(@recurring_event, format: :json).html_safe %>"),
-  true
-);
-$('.modal').modal('hide');
+window.location.reload();
