--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -9,6 +9,7 @@
 
   <div class="form-actions">
     <%= f.button :submit %>
+    <%= f.submit "update all events" %>
     <%= link_to 'New Recurring Event', 
                 new_recurring_event_path,
                 class: 'btn btn-default', 
