--- a/app/views/recurring_events/_form.html.erb
+++ b/app/views/recurring_events/_form.html.erb
@@ -1,7 +1,8 @@
 <%= simple_form_for @recurring_event, remote: true do |f| %>
   <div class="form-inputs">
     <%= f.input :title %>
-    <%= f.input :anchor, input_html: { class: "form-control input-sm" } %>
+    <%= f.input :anchor, as: :date %>
+    <%= f.input :end_date, as: :date %>
     <%= f.input :frequency, as: :select, collection: RecurringEvent.frequencies.keys, input_html: { class: "form-control input-sm" } %>
     <%= f.input :color, as: :select, collection: [['Black','black'], ['Green','green'], ['Red','red']] %>
   </div>
@@ -12,11 +13,17 @@
                 new_event_path,
                 class: 'btn btn-default', 
                 remote: true if @recurring_event.new_record? %>
+    <%= link_to 'Update Single Recurring Event',
+                 edit_event_path,
+                 class: 'btn btn-default',
+                 data: { confirm: "res?"},
+                 remote: true unless @recurring_event.new_record? %>
     <%= link_to 'Delete', 
                 @recurring_event, 
                 method: :delete, 
                 class: 'btn btn-danger', 
                 data: { confirm: 'Are you sure?' }, 
                 remote: true unless @recurring_event.new_record? %>
+    
   </div>
 <% end %>
