--- a/app/views/recurring_events/destroy.js.erb
+++ b/app/views/recurring_events/destroy.js.erb
@@ -1,2 +1,4 @@
 $('.calendar').fullCalendar('removeEvents', '<%= "recurring_#{@recurring_event.id}" %>');
 $('.modal').modal('hide');
+window.location.reload();
+
