--- a/app/views/events/new.js.erb
+++ b/app/views/events/new.js.erb
@@ -1,4 +1,6 @@
 $('.modal-backdrop').hide();
 $('#remote_container').html('<%= j render "new" %>');
 $('#new_event').modal('show');
+window.location.reload();
+
 
