--- a/app/views/recurring_events/new.js.erb
+++ b/app/views/recurring_events/new.js.erb
@@ -1,4 +1,5 @@
 $('.modal-backdrop').hide();
 $('#remote_container').html('<%= j render "new" %>');
 $('#new_recurring_event').modal('show');
+window.location.reload();
 
