--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -2,8 +2,8 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%#= f.input :date_range, input_html: { class: "form-control input-sm date-range-picker" } %>
-    <%= f.input :start %>
-    <%= f.input :end %>
+    <%= f.input :start, as: :date %>
+    <%= f.input :end, as: :date %>
     <%= f.input :color, as: :select, collection: [['Black','black'], ['Green','green'], ['Red','red']] %>
   </div>
 
